# veza

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
examples/: run_pipeline.sh
merge/: Cargo.toml
merge/src/: main.rs  opts.rs
mux/: Cargo.toml
mux/src/: opts.rs
probe/can/: Cargo.toml
probe/can/src/: main.rs
probe/pipe/: Cargo.toml
probe/pipe/src/: main.rs
probe/pipe/test/: client.sh  server.sh  tx_packets.sh
serve/: Cargo.toml  dummy_input.py
serve/src/: main.rs
serve/tests/: cli.rs
ui/: Makefile  index.html  main.css  main.js  package-lock.json  package.json  script.js  style.css  webpack.config.js  websocket.py
ui/components/: App.vue  GaugeWidget.vue  TextWidget.vue  Tile.vue
