[package]
name = "mux"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"]}
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = "0.1.7"
clap = "3.0.0-beta.4"
